# bit-quantization

./: CMakeLists.txt  README.md  main.cpp  report.py
data/: quantization_output.txt
include/: swaml_bitquant.h  swaml_quantizeBlock.h  swaml_types.h
include/fp16/: bitcasts.h  fp16.h  macros.h
src/: CMakeLists.txt  swaml_bitquant.cpp
tests/: CMakeLists.txt
